# CPP-REPO

BFS/: .gitignore  main.cpp
BFS/lines/: A.txt  B.txt  C.txt
BST/: .gitignore  CMakeLists.txt  main.cpp
CalendarSemesterWork/: CApp.cpp  CApp.h  CAppParameters.h  CCalendar.cpp  CCalendar.h  CConfigFile.h  CDate.cpp  CDate.h  CDayCalendar.cpp  CDayCalendar.h  CEvent.cpp  CEvent.h  CIntegerGetter.cpp  CIntegerGetter.h  CMakeLists.txt  CMonthCalendar.cpp  CMonthCalendar.h  COneTimeEvent.cpp  COneTimeEvent.h  CRepeatingEvent.cpp  CRepeatingEvent.h  CStringGetter.cpp  CStringGetter.h  CUserInterface.cpp  CUserInterface.h  CWeekCalendar.cpp  Makefile  main.cpp  schema.mermaid  testdata  testdata2
InvoiceFraudCheck/: .gitignore  HomeWork5.cpp
